RESOLVED FIXED31132
Web Inspector: TimelineRecordFactory.{h,cpp} has some method name inconsistencies.
https://bugs.webkit.org/show_bug.cgi?id=31132
Summary Web Inspector: TimelineRecordFactory.{h,cpp} has some method name inconsisten...
Kelly Norton
Reported 2009-11-04 11:14:57 PST
Some end in TimelineRecord where others end in Record. They should all end in Record.
Attachments
Renames the misnamed. (12.13 KB, patch)
2009-11-04 11:17 PST, Kelly Norton
no flags
Kelly Norton
Comment 1 2009-11-04 11:17:14 PST
Created attachment 42500 [details] Renames the misnamed.
WebKit Commit Bot
Comment 2 2009-11-04 12:12:23 PST
Comment on attachment 42500 [details] Renames the misnamed. Clearing flags on attachment: 42500 Committed r50524: <http://trac.webkit.org/changeset/50524>
WebKit Commit Bot
Comment 3 2009-11-04 12:12:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.