WebCore/inspector/TimelineRecordFactory.cpp
@@ -79,7 +79,7 @@ ScriptObject TimelineRecordFactory::createTimerInstallRecord(InspectorFrontend* 
     return record;
 }
 
-ScriptObject TimelineRecordFactory::createXHRReadyStateChangeTimelineRecord(InspectorFrontend* frontend, double startTime, const String& url, int readyState)
+ScriptObject TimelineRecordFactory::createXHRReadyStateChangeRecord(InspectorFrontend* frontend, double startTime, const String& url, int readyState)
 {
     ScriptObject record = createGenericRecord(frontend, startTime);
     ScriptObject data = frontend->newScriptObject();
@@ -89,7 +89,7 @@ ScriptObject TimelineRecordFactory::createXHRReadyStateChangeTimelineRecord(Insp
     return record;
 }
 
-ScriptObject TimelineRecordFactory::createXHRLoadTimelineRecord(InspectorFrontend* frontend, double startTime, const String& url)
+ScriptObject TimelineRecordFactory::createXHRLoadRecord(InspectorFrontend* frontend, double startTime, const String& url)
 {
     ScriptObject record = createGenericRecord(frontend, startTime);
     ScriptObject data = frontend->newScriptObject();
@@ -98,27 +98,27 @@ ScriptObject TimelineRecordFactory::createXHRLoadTimelineRecord(InspectorFronten
     return record;
 }
 
-ScriptObject TimelineRecordFactory::createEvaluateScriptTimelineRecord(InspectorFrontend* frontend, double startTime, const String& url, double lineNumber) 
+ScriptObject TimelineRecordFactory::createEvaluateScriptRecord(InspectorFrontend* frontend, double startTime, const String& url, double lineNumber) 
 {
-    ScriptObject item = createGenericRecord(frontend, startTime);
+    ScriptObject record = createGenericRecord(frontend, startTime);
     ScriptObject data = frontend->newScriptObject();
     data.set("url", url);
     data.set("lineNumber", lineNumber);
-    item.set("data", data);
-    return item;
+    record.set("data", data);
+    return record;
 }
 
 ScriptObject TimelineRecordFactory::createMarkTimelineRecord(InspectorFrontend* frontend, double startTime, const String& message) 
 {
-    ScriptObject item = createGenericRecord(frontend, startTime);
+    ScriptObject record = createGenericRecord(frontend, startTime);
     ScriptObject data = frontend->newScriptObject();
     data.set("message", message);
-    item.set("data", data);
-    return item;
+    record.set("data", data);
+    return record;
 }
 
 
-ScriptObject TimelineRecordFactory::createResourceSendRequestTimelineRecord(InspectorFrontend* frontend, double startTime,
+ScriptObject TimelineRecordFactory::createResourceSendRequestRecord(InspectorFrontend* frontend, double startTime,
     unsigned long identifier, bool isMainResource, const ResourceRequest& request)
 {
     ScriptObject record = createGenericRecord(frontend, startTime);
@@ -131,7 +131,7 @@ ScriptObject TimelineRecordFactory::createResourceSendRequestTimelineRecord(Insp
     return record;
 }
 
-ScriptObject TimelineRecordFactory::createResourceReceiveResponseTimelineRecord(InspectorFrontend* frontend, double startTime,
+ScriptObject TimelineRecordFactory::createResourceReceiveResponseRecord(InspectorFrontend* frontend, double startTime,
     unsigned long identifier, const ResourceResponse& response)
 {
     ScriptObject record = createGenericRecord(frontend, startTime);
@@ -144,7 +144,7 @@ ScriptObject TimelineRecordFactory::createResourceReceiveResponseTimelineRecord(
     return record;
 }
 
-ScriptObject TimelineRecordFactory::createResourceFinishTimelineRecord(InspectorFrontend* frontend, double startTime,
+ScriptObject TimelineRecordFactory::createResourceFinishRecord(InspectorFrontend* frontend, double startTime,
     unsigned long identifier, bool didFail)
 {
     ScriptObject record = createGenericRecord(frontend, startTime);
@@ -155,7 +155,7 @@ ScriptObject TimelineRecordFactory::createResourceFinishTimelineRecord(Inspector
     return record;
 }
 
-ScriptObject TimelineRecordFactory::createPaintTimelineRecord(InspectorFrontend* frontend, double startTime, const IntRect& rect)
+ScriptObject TimelineRecordFactory::createPaintRecord(InspectorFrontend* frontend, double startTime, const IntRect& rect)
 {
     ScriptObject record = createGenericRecord(frontend, startTime);
     ScriptObject data = frontend->newScriptObject();
